using UnityEngine;

public static class HashedAnimations
{
    public static int Idle = Animator.StringToHash("Idle");
    public static int Attack = Animator.StringToHash("Attack");
    public static int Attack1 = Animator.StringToHash("Attack1");
    public static int Attack2 = Animator.StringToHash("Attack2");
    public static int Attack3 = Animator.StringToHash("Attack3");
}
